# AI-graphiti-lapallm

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  DEMOCHAT_README.md  Dockerfile  Makefile  QUICKSTART.md  README.md  TESTING_GUIDE.md  app.py  demo_flow.ipynb  demochat.py  docker-compose.services.yml  docker-compose.yml  graph.mmd  graph_tabula_rasa.mmd  lapathon_api_examples.md  pyproject.toml  react_test.ipynb  requirements.txt  start.py  test_qdrant_client.py
.claude/: agent.md  rules.md
.claude/agents/: ai-expert.md
agent/: graph.py  helpers.py  nodes.py  state.py
agent/nodes/: actualize.py  auto_resolve.py  check_conflicts.py  classify.py  confirm.py  conflicts.py  context_answer.py  extract.py  generate.py  generate_learn_response.py  generate_solve_response.py  generate_teach_response.py  index_facts.py  index_raw.py  query_analyzer.py  react.py  react_simple.py  resolve.py  resolve_conflicts.py  retrieve.py  retrieve_enhanced.py  store.py  store_indexed.py  validate.py
agent/nodes/archived/: actualize.py  react.py  react_simple.py  retrieve.py  store_indexed.py
agent/storage/: message_store.py
clients/: graphiti_client.py  graphiti_client_wrapper.py  hosted_embedder.py  hosted_reranker.py  llm_client.py  noop_reranker.py  qdrant_client.py  reranker.py
config/: cost_tracking.py  logging_config.py  phoenix_config.py  settings.py
db/: __init__.py  connection.py  message_repository.py  models.py  neo4j_helpers.py  simple_init.py
docs/: DOCKER_DEPLOYMENT.md  DOCKER_SETUP.md  LANGSMITH_SETUP.md  MEMORY_MANAGEMENT.md  PHOENIX_SETUP.md  QUICKSTART.md
models/: schemas.py
routers/: __init__.py  schemas.py  text.py
scripts/: demo_flow.ipynb  graph.mmd  graph_generate_view.py  graph_with_conflicts.mmd  preload_models.py  react_test.ipynb  test_llm_connection.py
utils/: __init__.py  langsmith_setup.py
