[project]
name = "graphity-lapa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.19.0",
    "alembic>=1.18.0",
    "arize-phoenix-client>=1.27.2",
    "arize-phoenix-otel>=0.14.0",
    "asyncpg>=0.31.0",
    "dspy-ai>=3.1.0",
    "fastapi>=0.128.0",
    "greenlet>=2.0.0",
    "httpx>=0.25.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.0",
    "langchain-openai>=1.1.6",
    "langgraph>=0.0.40",
    "langgraph-checkpoint>=0.0.5",
    "langsmith>=0.1.0",
    "matplotlib>=3.7.0",
    "openai>=1.10.0",
    "openinference-instrumentation>=0.1.42",
    "openinference-instrumentation-langchain>=0.1.58",
    "openinference-instrumentation-openai>=0.1.41",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.16.2",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.27.0",
]
